--- a/Travel/Views/Shared/_Layout.cshtml
+++ b/Travel/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Gezi Dolu - Exquisite Blog Template</title>
+    <title>Gezidolu</title>
+
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,700|Adamina' type='text/css' media='all' />
 
     <link rel="stylesheet" type="text/css" href="~/content/travel/css/libs/font-awesome.min.css">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="~/content/travel/css/libs/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="~/content/travel/css/libs/animate.css">
     <link rel="stylesheet" type="text/css" href="~/content/travel/css/libs/magnific-popup.css">
-    @*<link rel="stylesheet" href="~/content/travel/css/libs/icomoon.css">*@
+    <link rel="stylesheet" href="~/content/travel/css/libs/icomoon.css">
     <link rel="stylesheet" type="text/css" href="~/content/travel/css/styles.css">
 </head>
 <body>
