--- a/Travel/Views/Admin/Login.cshtml
+++ b/Travel/Views/Admin/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = null;}
-
+@model Travel.Models.Admin.LoginModel
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,53 +16,10 @@
     <link href="~/content/limitless/assets/css/components.min.css" rel="stylesheet" type="text/css">
     <link href="~/content/limitless/assets/css/colors.min.css" rel="stylesheet" type="text/css">
     <!-- /global stylesheets -->
-    <!-- Core JS files -->
-    <script src="~/content/limitless/global_assets/js/main/jquery.min.js"></script>
-    <script src="~/content/limitless/global_assets/js/main/bootstrap.bundle.min.js"></script>
-    <script src="~/content/limitless/global_assets/js/plugins/loaders/blockui.min.js"></script>
-    <!-- /core JS files -->
-    <!-- Theme JS files -->
-    <script src="~/content/limitless/global_assets/js/plugins/visualization/d3/d3.min.js"></script>
-    <script src="~/content/limitless/global_assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
-    <script src="~/content/limitless/global_assets/js/plugins/forms/styling/switchery.min.js"></script>
-    <script src="~/content/limitless/global_assets/js/plugins/ui/moment/moment.min.js"></script>
-    <script src="~/content/limitless/global_assets/js/plugins/pickers/daterangepicker.js"></script>
-
-    <script src="~/content/limitless/assets/js/app.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_pages/dashboard.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/streamgraph.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/sparklines.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/lines.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/areas.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/donuts.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/bars.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/progress.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/heatmaps.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/pies.js"></script>
-    <script src="~/content/limitless/global_assets/js/demo_charts/pages/dashboard/light/bullets.js"></script>
-    <!-- /theme JS files -->
-
 </head>
 
 <body>
 
-    <!-- Main navbar -->
-    <div class="navbar navbar-expand-md navbar-dark">
-        <div class="navbar-brand">
-            <a href="index.html" class="d-inline-block">
-                <img src="~/content/limitless/global_assets/images/logo_light.png" alt="">
-            </a>
-        </div>
-
-        <div class="d-md-none">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-mobile">
-                <i class="icon-tree5"></i>
-            </button>
-        </div>
-
-
-    </div>
-    <!-- /main navbar -->
     <!-- Page content -->
     <div class="page-content">
 
@@ -73,7 +30,10 @@
             <div class="content d-flex justify-content-center align-items-center">
 
                 <!-- Login form -->
-                <form class="login-form" action="http://demo.interface.club/limitless/demo/Template/layout_1/LTR/default/full/index.html">
+
+                @using (Html.BeginForm("Login", "Admin", FormMethod.Post, new { @class = "login-form" }))
+                {
+                    @Html.AntiForgeryToken()
                     <div class="card mb-0">
                         <div class="card-body">
                             <div class="text-center mb-3">
@@ -83,14 +43,17 @@
                             </div>
 
                             <div class="form-group form-group-feedback form-group-feedback-left">
-                                <input type="text" class="form-control" placeholder="Username">
+                                @*<input type="text" class="form-control" placeholder="Username">*@
+                                @Html.EditorFor(f => f.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+
                                 <div class="form-control-feedback">
                                     <i class="icon-user text-muted"></i>
                                 </div>
                             </div>
 
                             <div class="form-group form-group-feedback form-group-feedback-left">
-                                <input type="password" class="form-control" placeholder="Password">
+                                @* <input type="password" class="form-control" placeholder="Password">*@
+                                @Html.EditorFor(f => f.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
                                 <div class="form-control-feedback">
                                     <i class="icon-lock2 text-muted"></i>
                                 </div>
@@ -101,34 +64,11 @@
                             </div>
                         </div>
                     </div>
-                </form>
+                }
                 <!-- /login form -->
 
             </div>
             <!-- /content area -->
-            <!-- Footer -->
-            <div class="navbar navbar-expand-lg navbar-light">
-                <div class="text-center d-lg-none w-100">
-                    <button type="button" class="navbar-toggler dropdown-toggle" data-toggle="collapse" data-target="#navbar-footer">
-                        <i class="icon-unfold mr-2"></i>
-                        Footer
-                    </button>
-                </div>
-
-                <div class="navbar-collapse collapse" id="navbar-footer">
-                    <span class="navbar-text">
-                        &copy; 2015 - 2018. <a href="#">Limitless Web App Kit</a> by <a href="../../../../../../../../themeforest.net/user/kopyov.html" target="_blank">Eugene Kopyov</a>
-                    </span>
-
-                    <ul class="navbar-nav ml-lg-auto">
-                        <li class="nav-item"><a href="../../../../../../../../kopyov.ticksy.com/index.html" class="navbar-nav-link" target="_blank"><i class="icon-lifebuoy mr-2"></i> Support</a></li>
-                        <li class="nav-item"><a href="http://demo.interface.club/limitless/docs/" class="navbar-nav-link" target="_blank"><i class="icon-file-text2 mr-2"></i> Docs</a></li>
-                        <li class="nav-item"><a href="../../../../../../../../themeforest.net/item/limitless-responsive-web-application-kit/130803287d6b.html?ref=kopyov" class="navbar-nav-link font-weight-semibold"><span class="text-pink-400"><i class="icon-cart2 mr-2"></i> Purchase</span></a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- /footer -->
-
         </div>
         <!-- /main content -->
 
