--- a/Travel/Views/Shared/_AdminLayout.cshtml
+++ b/Travel/Views/Shared/_AdminLayout.cshtml
@@ -70,11 +70,7 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a href="#" class="navbar-nav-link dropdown-toggle caret-0" data-toggle="dropdown">
-                        <i class="icon-git-compare"></i>
-                        <span class="d-md-none ml-2">Git updates</span>
-                        <span class="badge badge-pill bg-warning-400 ml-auto ml-md-0">9</span>
-                    </a>
+                 
 
                     <div class="dropdown-menu dropdown-content wmin-md-350">
                         <div class="dropdown-content-header">
@@ -153,207 +149,6 @@
             </ul>
 
             <span class="badge bg-success ml-md-3 mr-md-auto">Online</span>
-
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a href="#" class="navbar-nav-link dropdown-toggle caret-0" data-toggle="dropdown">
-                        <i class="icon-people"></i>
-                        <span class="d-md-none ml-2">Users</span>
-                    </a>
-
-                    <div class="dropdown-menu dropdown-menu-right dropdown-content wmin-md-300">
-                        <div class="dropdown-content-header">
-                            <span class="font-weight-semibold">Users online</span>
-                            <a href="#" class="text-default"><i class="icon-search4 font-size-base"></i></a>
-                        </div>
-
-                        <div class="dropdown-content-body dropdown-scrollable">
-                            <ul class="media-list">
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face18.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <a href="#" class="media-title font-weight-semibold">Jordana Ansley</a>
-                                        <span class="d-block text-muted font-size-sm">Lead web developer</span>
-                                    </div>
-                                    <div class="ml-3 align-self-center"><span class="badge badge-mark border-success"></span></div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face24.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <a href="#" class="media-title font-weight-semibold">Will Brason</a>
-                                        <span class="d-block text-muted font-size-sm">Marketing manager</span>
-                                    </div>
-                                    <div class="ml-3 align-self-center"><span class="badge badge-mark border-danger"></span></div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face17.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <a href="#" class="media-title font-weight-semibold">Hanna Walden</a>
-                                        <span class="d-block text-muted font-size-sm">Project manager</span>
-                                    </div>
-                                    <div class="ml-3 align-self-center"><span class="badge badge-mark border-success"></span></div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face19.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <a href="#" class="media-title font-weight-semibold">Dori Laperriere</a>
-                                        <span class="d-block text-muted font-size-sm">Business developer</span>
-                                    </div>
-                                    <div class="ml-3 align-self-center"><span class="badge badge-mark border-warning-300"></span></div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face16.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <a href="#" class="media-title font-weight-semibold">Vanessa Aurelius</a>
-                                        <span class="d-block text-muted font-size-sm">UX expert</span>
-                                    </div>
-                                    <div class="ml-3 align-self-center"><span class="badge badge-mark border-grey-400"></span></div>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="dropdown-content-footer bg-light">
-                            <a href="#" class="text-grey mr-auto">All users</a>
-                            <a href="#" class="text-grey"><i class="icon-gear"></i></a>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a href="#" class="navbar-nav-link dropdown-toggle caret-0" data-toggle="dropdown">
-                        <i class="icon-bubbles4"></i>
-                        <span class="d-md-none ml-2">Messages</span>
-                        <span class="badge badge-pill bg-warning-400 ml-auto ml-md-0">2</span>
-                    </a>
-
-                    <div class="dropdown-menu dropdown-menu-right dropdown-content wmin-md-350">
-                        <div class="dropdown-content-header">
-                            <span class="font-weight-semibold">Messages</span>
-                            <a href="#" class="text-default"><i class="icon-compose"></i></a>
-                        </div>
-
-                        <div class="dropdown-content-body dropdown-scrollable">
-                            <ul class="media-list">
-                                <li class="media">
-                                    <div class="mr-3 position-relative">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face10.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-
-                                    <div class="media-body">
-                                        <div class="media-title">
-                                            <a href="#">
-                                                <span class="font-weight-semibold">James Alexander</span>
-                                                <span class="text-muted float-right font-size-sm">04:58</span>
-                                            </a>
-                                        </div>
-
-                                        <span class="text-muted">who knows, maybe that would be the best thing for me...</span>
-                                    </div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3 position-relative">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face3.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-
-                                    <div class="media-body">
-                                        <div class="media-title">
-                                            <a href="#">
-                                                <span class="font-weight-semibold">Margo Baker</span>
-                                                <span class="text-muted float-right font-size-sm">12:16</span>
-                                            </a>
-                                        </div>
-
-                                        <span class="text-muted">That was something he was unable to do because...</span>
-                                    </div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face24.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <div class="media-title">
-                                            <a href="#">
-                                                <span class="font-weight-semibold">Jeremy Victorino</span>
-                                                <span class="text-muted float-right font-size-sm">22:48</span>
-                                            </a>
-                                        </div>
-
-                                        <span class="text-muted">But that would be extremely strained and suspicious...</span>
-                                    </div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face4.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <div class="media-title">
-                                            <a href="#">
-                                                <span class="font-weight-semibold">Beatrix Diaz</span>
-                                                <span class="text-muted float-right font-size-sm">Tue</span>
-                                            </a>
-                                        </div>
-
-                                        <span class="text-muted">What a strenuous career it is that I've chosen...</span>
-                                    </div>
-                                </li>
-
-                                <li class="media">
-                                    <div class="mr-3">
-                                        <img src="~/content/limitless/global_assets/images/demo/users/face25.jpg" width="36" height="36" class="rounded-circle" alt="">
-                                    </div>
-                                    <div class="media-body">
-                                        <div class="media-title">
-                                            <a href="#">
-                                                <span class="font-weight-semibold">Richard Vango</span>
-                                                <span class="text-muted float-right font-size-sm">Mon</span>
-                                            </a>
-                                        </div>
-
-                                        <span class="text-muted">Other travelling salesmen live a life of luxury...</span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="dropdown-content-footer justify-content-center p-0">
-                            <a href="#" class="bg-light text-grey w-100 py-2" data-popup="tooltip" title="Load more"><i class="icon-menu7 d-block top-0"></i></a>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="nav-item dropdown dropdown-user">
-                    <a href="#" class="navbar-nav-link d-flex align-items-center dropdown-toggle" data-toggle="dropdown">
-                        <img src="~/content/limitless/global_assets/images/demo/users/face11.jpg" class="rounded-circle mr-2" height="34" alt="">
-                        <span>Victoria</span>
-                    </a>
-
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a href="#" class="dropdown-item"><i class="icon-user-plus"></i> My profile</a>
-                        <a href="#" class="dropdown-item"><i class="icon-coins"></i> My balance</a>
-                        <a href="#" class="dropdown-item"><i class="icon-comment-discussion"></i> Messages <span class="badge badge-pill bg-blue ml-auto">58</span></a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item"><i class="icon-cog5"></i> Account settings</a>
-                        <a href="#" class="dropdown-item"><i class="icon-switch2"></i> Logout</a>
-                    </div>
-                </li>
-            </ul>
         </div>
     </div>
     <!-- /main navbar -->
@@ -376,37 +171,13 @@
             <!-- /sidebar mobile toggler -->
             <!-- Sidebar content -->
             <div class="sidebar-content">
-
-                <!-- User menu -->
-                <div class="sidebar-user">
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="mr-3">
-                                <a href="#"><img src="~/content/limitless/global_assets/images/demo/users/face11.jpg" width="38" height="38" class="rounded-circle" alt=""></a>
-                            </div>
-
-                            <div class="media-body">
-                                <div class="media-title font-weight-semibold">Victoria Baker</div>
-                                <div class="font-size-xs opacity-50">
-                                    <i class="icon-pin font-size-sm"></i> &nbsp;Santa Ana, CA
-                                </div>
-                            </div>
-
-                            <div class="ml-3 align-self-center">
-                                <a href="#" class="text-white"><i class="icon-cog3"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /user menu -->
                 <!-- Main navigation -->
                 <div class="card card-sidebar-mobile">
                     <ul class="nav nav-sidebar" data-nav-type="accordion">
-
                         <!-- Main -->
                         <li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Main</div> <i class="icon-menu" title="Main"></i></li>
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link active">
+                            <a href="@Url.Action("Content","Admin")" class="nav-link active">
                                 <i class="icon-home4"></i>
                                 <span>
                                     Dashboard
