--- a/Travel/Views/Home/About.cshtml
+++ b/Travel/Views/Home/About.cshtml
@@ -1,51 +1,48 @@
-﻿@{
+﻿@model Travel.Models.About.AboutModel
+
+@{
     ViewBag.Title = "Hakkımızda";
 }
+<div class="content">
 
-<!-- Main Content -->
-<div id="main-content" class="main-content clearfix" data-sidebar="right">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="blog-posts">
+    <!-- Main Content -->
+    <div id="main-content" class="main-content clearfix" data-sidebar="right">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="blog-posts">
+                        <article class="post-single page">
+                            <!-- Title -->
+                            <h3 class="title">
+                                @Model.Title
+                            </h3>
+                            <!-- End Title -->
+                            <!-- Post Details -->
+                            <div class="post-details">
+                                <a href="" class="post-date">@Model.DateString.ToUpper()</a>
+                            </div>
+                            <!-- End Post Details -->
+                            <!-- Thumbnail -->
+                            <div class="post-media">
+                                <img src="~/Content/travel/images/@Model.Image" alt="Little About Me">
+                            </div>
 
-                    <article class="post-single page">
-
-                        <!-- Title -->
-                        <h3 class="title">
-                            Little About Me
-                        </h3>
-                        <!-- End Title -->
-                        <!-- Post Details -->
-                        <div class="post-details">
-                            <a href="" class="post-date">May 29, 2017</a>
-                        </div>
-                        <!-- End Post Details -->
-                        <!-- Thumbnail -->
-                        <div class="post-media">
-                            <img src="~/content/travel/images/posts/26.jpg" alt="Little About Me">
-                        </div>
-                        <!-- End Thumbnail -->
-
-                        <div class="the-excerpt">
-                            <p><em><strong>My name is Dave Ellender, i loves beautiful content and doesn&#8217;t like to give in easily. I&#8217;m a Philadelphia based researcher, author, and speaker. My book Design for the Mind, is available from Manning Publications.</strong></em></p>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-                            <blockquote><p>There are known knowns. There are things we know we know. We also know there are known unknowns, that is to say we know there are some things we do not know. But there are also unknown unknowns &#8211; he ones we don&#8217;t know we don&#8217;t know.</p></blockquote>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-
-                        </div>
-
-
-                    </article>
-
+                            <div class="the-excerpt">
+                                <p><em><strong>@Model.ShortDefinition</strong></em></p>
+                                <p>@Model.Definition</p>
+                                <blockquote><p>@Model.Note</p></blockquote>
+                            </div>
+                        </article>
+                    </div>
                 </div>
 
+                <!-- Sidebar -->
+                @Html.Partial("_RightSideBar")
+                <!-- End Sidebar -->
             </div>
-
-            <!-- Sidebar -->
-            @Html.Partial("_RightSideBar")
-            <!-- End Sidebar -->
         </div>
     </div>
+    <!-- End Main Content -->
+
+
 </div>
-<!-- End Main Content -->
