--- a/Travel/Views/About/List.cshtml
+++ b/Travel/Views/About/List.cshtml
@@ -17,8 +17,6 @@
 
                 <a href="@Url.Action("List","About")" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
             </div>
-
-             
         </div>
     </div>
     <!-- /page header -->
@@ -39,10 +37,10 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                         <div class="form-group row">
-                            @Html.LabelFor(model => model.SearchString, htmlAttributes: new { @class = "col-form-label col-md-2" })
+                            <label class="col-form-label col-md-2">Başlık</label>
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.SearchString, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.SearchString, "", new { @class = "text-danger" })
+                                @Html.EditorFor(model => model.SearchName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.SearchName, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
@@ -57,25 +55,22 @@
         </div>
 
         <div class="card">
-            <table id="myTable" class="cell-border" style="width:100%;">
+            <table id="myTable" class="table table-striped table-bordered" style="width:100%;">
                 <thead>
                     <tr>
                         <th>Baslik</th>
+                        <th>Fotoğraf</th>
                         <th>Ekleme Tarihi</th>
                         <th>Aktif mi?</th>
                         <th>Düzenle</th>
+                        <th>Sil</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </div>
-
     </div>
-    <!-- /content area -->
 </div>
-
-
-
 <script>
     $(document).ready(function () {
 
@@ -93,6 +88,13 @@
             "columns": [
                 { "data": "Title", "name": "Title", "autoWidth": true },
                 {
+                    "data": "img",
+                    "render": function (url, type, full) {
+                        console.log(full);
+                        return '<img height="50px" width="75px" src="/content/travel/images/' + full.Image + '"/>';
+                    }
+                },
+                {
                     "data": "CreateDate", "name": "CreateDate", "autoWidth": true,
                     "mRender": function (data, type, full)
                     {
@@ -104,22 +106,40 @@
                 },
                 {
                     "data": "IsActive", "name": "IsActive", "autoWidth": true, "render": function (data, type, row) {
-                        return (row[5] = "true") ?
+                        debugger;
+                        return (data === true) ?
                             "Evet" : "Hayır";
-                    } },
+                    }
+                },
                 {
                     "render": function (data, type, full, meta)
                     {
-                        return '<a class="Edit" href="/About/Edit/' + full.Id + '">Düzenle</a>';
+                        return '<a class="btn btn-info"  href="/About/Edit/' + full.Id + '">Düzenle</a>';
                     }
                 },
-            ]
+                {
+                    "render": function (data, type, full, meta) {
+                        return '<a class="btn btn-danger"  href="/About/Delete/' + full.Id + '">Sil</a>';
+                    }
+                }
+            ],
+            "language": {
+                "sInfo": '',//remove => There are a total of _TOTAL_ <span class="lvllbl"></span>.
+                "sInfoEmpty": '',//remove => There are a total of _TOTAL_ <span class="lvllbl"></span>.
+                "sEmptyTable": '',//remove => There are no <span class="lvllbl"></span> to display
+                "sZeroRecords": '',//remove => There are no matching <span class="lvllbl"></span> to display
+                "sProcessing": 'Yükleniyor...<span class="lvllbl"></span>',
+                "infoFiltered": "",//remove => - filtered from x total entries,
+                "sLengthMenu": "Gösterilen Hakkımızda Sayısı _MENU_", //change => dropdownlist
+                "paginate": { "previous": "Önceki", "next": "Sonraki" }//remove => previous,next
+            },
         });
         $('#btnSearch').click(function () {
             //Apply Custom search on jQuery DataTables here
+            debugger;
             oTable = $('#myTable').DataTable();
             var searchValue = {
-                SearchName: $("#@Html.IdFor(model => model.SearchString)").val(),
+                SearchName: $("#@Html.IdFor(model => model.SearchName)").val(),
             };
             var blkstr = [];
             $.each(searchValue, function(idx2,val2) {
@@ -130,6 +150,15 @@
             oTable.search(blkstr);
             //hit search on server
             oTable.draw();
+        });
+
+        var input = document.getElementById("SearchName");
+
+        input.addEventListener("keyup", function (event) {
+            if (event.keyCode === 13) {
+                event.preventDefault();
+                document.getElementById("btnSearch").click();
+            }
         });
     });
 </script>
