--- a/Travel/Views/Admin/Content.cshtml
+++ b/Travel/Views/Admin/Content.cshtml
@@ -11,19 +11,17 @@
         <div class="breadcrumb-line breadcrumb-line-light header-elements-md-inline">
             <div class="d-flex">
                 <div class="breadcrumb">
-                    <a href="index.html" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Dashboard</a>
+                    <a href="" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Dashboard</a>
                     <span class="breadcrumb-item active">Content</span>
                 </div>
 
-                <a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
+                <a href="" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
             </div>
         </div>
     </div>
     <!-- /page header -->
     <!-- Content area -->
     <div class="content">
-
-      
 
     </div>
     <!-- /content area -->
