--- a/Travel/Views/Shared/_AdminLayout.cshtml
+++ b/Travel/Views/Shared/_AdminLayout.cshtml
@@ -43,6 +43,7 @@
     <!--DataTables CDN-->
     <link href="//cdn.datatables.net/1.10.9/css/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+    <script src="~/Content/limitless/global_assets/js/plugins/tables/datatables/datatables.min.js"></script>
     <!--/dataTables CDN-->
 </head>
 
