--- a/Travel/Views/Shared/_AdminLayout.cshtml
+++ b/Travel/Views/Shared/_AdminLayout.cshtml
@@ -140,6 +140,13 @@
                             </a>
                         </li>
 
+                        <li class="nav-item nav-item-submenu">
+                            <a href="@Url.Action("List","Blog")" class="nav-link"><i class="icon-pencil"></i> <span> Bloglar</span></a>
+                            <ul class="nav nav-group-sub" data-submenu-title="Bloglar">
+                                <li class="nav-item"><a href="~/Blog/Create" class="nav-link"> Blog Ekle </a></li>
+                                <li class="nav-item"><a href="~/Blog/List" class="nav-link"> Blog Listesi </a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- /main navigation -->
