--- a/Travel/Views/Home/_RightSideBar.cshtml
+++ b/Travel/Views/Home/_RightSideBar.cshtml
@@ -11,20 +11,8 @@
                 </div>
                 <div class="widget-follow-content">
                     <div class="inner clearfix">
-                        <a href="" title="Behance">
-                            <i class="fa fa-behance"></i>
-                        </a>
-                        <a href="" title="Dribbble">
-                            <i class="fa fa-dribbble"></i>
-                        </a>
-                        <a href="" title="Facebook">
-                            <i class="fa fa-facebook"></i>
-                        </a>
-                        <a href="" title="Google Plus">
-                            <i class="fa fa-google-plus"></i>
-                        </a>
-                        <a href="" title="Linkedin">
-                            <i class="fa fa-linkedin"></i>
+                        <a href="https://www.instagram.com/muratjpeg/" title="Instagram">
+                            <i class="fa fa-instagram"></i>
                         </a>
                     </div>
                 </div>
@@ -37,22 +25,6 @@
             </div>
         </div>
         <!-- End About -->
-        <!-- Mailchimp -->
-        <div class="widget kd-mailchimp">
-            <h2 class="widget-title"><span>Subscribe</span></h2>
-            <div class="widget-content">
-                <form class="kd-subscribe">
-                    <div class="form-item form-remove">
-                        <input type="email" class="kd-subscribe-email" placeholder="Enter your email" value="" required />
-                    </div>
-                    <div class="form-submit icon-message-1">
-                        <input type="submit" class="kd-btn kd-subscribe" value="">
-                    </div>
-                </form>
-                <p class="subscribe-status"></p>
-            </div>
-        </div>
-        <!-- End Mailchimp -->
         <!-- Popular Posts -->
         <div class="widget kd-popular-post kd-posts-list">
             <h2 class="widget-title">Most Popular</h2>
@@ -112,44 +84,6 @@
             </div>
         </div>
         <!-- End Popular Posts -->
-        <!-- Categories -->
-        <div class="widget kd-categories">
-            <h2 class="widget-title"><span>Categories</span></h2>
-            <div class="widget-content">
-                <div class="item">
-                    <div class="image" style="background-image: url(/content/travel/images/widgets/category/1.jpg); ">
-                        <img src="~/content/travel/images/widgets/category/1.jpg" alt="Food">
-                    </div>
-                    <div class="item-cat">
-                        <a href="">Food</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image" style="background-image: url(/content/travel/images/widgets/category/2.jpg); ">
-                        <img src="~/content/travel/images/widgets/category/2.jpg" alt="Travel">
-                    </div>
-                    <div class="item-cat">
-                        <a href="">Travel</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="image" style="background-image: url(/content/travel/images/widgets/category/3.jpg); ">
-                        <img src="~/content/travel/images/widgets/category/3.jpg" alt="Life Style">
-                    </div>
-                    <div class="item-cat">
-                        <a href="">Life Style</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Categories -->
-        <!-- Banner -->
-        <div id="kd_banner-2" class="widget kd-banner">
-            <div class="widget-banner-content" style="text-align: center;">
-                <img src="~/content/travel/images/widgets/banner/advertise.jpg" alt="">
-            </div>
-        </div>
-        <!-- End Banner -->
         <!-- Recent Posts -->
         <div class="widget kd-latest-posts kd-posts-list">
             <h2 class="widget-title">Recent Posts</h2>
