--- a/Travel/Views/Home/List.cshtml
+++ b/Travel/Views/Home/List.cshtml
@@ -38,18 +38,6 @@
                     </p>
                 </div>
                 <div class="socials">
-                    <a href="" title="Behance">
-                        <i class="fa fa-behance"></i>
-                    </a>
-                    <a href="" title="Dribbble">
-                        <i class="fa fa-dribbble"></i>
-                    </a>
-                    <a href="" title="Facebook">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="" title="Google Plus">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
                     <a href="" title="Instagram">
                         <i class="fa fa-instagram"></i>
                     </a>
@@ -80,8 +68,8 @@
                                         <!-- Thumbnail -->
                                         <div class="post-media">
                                             <a href="@Url.Action("Single","Home",new { id = item.Id })">
-                                                <div class="image" style="background-image: url(/content/travel/images/posts/9.jpg);">
-                                                    <img src="~/content/travel/images/posts/@item.Image1" alt="The basis of friendship is sharing">
+                                                <div class="image" style="background-image: url(/content/travel/images/blog/@item.Image1);">
+                                                    <img src="~/content/travel/images/blog/@item.Image1" alt="The basis of friendship is sharing">
                                                 </div>
                                             </a>
                                         </div>
@@ -126,8 +114,10 @@
                         @pager
                     </div>
                 }
+              
                 <!-- End Pagination -->
             </div>
+                
         </div>
     </div>
 </div>
