--- a/Travel/Views/Shared/_AdminLayout.cshtml
+++ b/Travel/Views/Shared/_AdminLayout.cshtml
@@ -51,7 +51,7 @@
     <!-- Main navbar -->
     <div class="navbar navbar-expand-md navbar-dark">
         <div class="navbar-brand">
-            <a href="index.html" class="d-inline-block">
+            <a href="@Url.Action("Index","Home")" class="d-inline-block">
                 <img src="~/content/limitless/global_assets/images/logo_light.png" alt="">
             </a>
         </div>
