--- a/Travel/Views/Shared/_Layout.cshtml
+++ b/Travel/Views/Shared/_Layout.cshtml
@@ -51,12 +51,12 @@
                                 <a href="@Url.Action("Index","Home")">Ana Sayfa</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
-                                <a href="">Kategoriler</a>
+                                <a>Kategoriler</a>
                                 <ul class="sub-menu">
                                     @foreach (var item in service.GetAllCategory())
                                     {
                                         <li class="menu-item">
-                                            <a href="">@item.Title</a>
+                                            <a href="@Url.Action("List","Home", new { categoryId = item.Id })">@item.Title</a>
                                         </li>
                                     }
                                 </ul>
@@ -73,18 +73,6 @@
                     <!-- Header Right -->
                     <div class="header-right pull-right">
                         <div class="socials">
-                            <a href="" title="Behance">
-                                <i class="fa fa-behance"></i>
-                            </a>
-                            <a href="" title="Dribbble">
-                                <i class="fa fa-dribbble"></i>
-                            </a>
-                            <a href="" title="Facebook">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a href="" title="Google Plus">
-                                <i class="fa fa-google-plus"></i>
-                            </a>
                             <a href="https://www.instagram.com/muratjpeg/" title="Instagram">
                                 <i class="fa fa-instagram"></i>
                             </a>
@@ -92,8 +80,8 @@
                         <div class="search">
                             <i class="fa fa-search"></i>
                             <div class="box-search">
-                                <form class="search-form" action="#" method="get">
-                                    <input type="search" class="search-field" placeholder="Search ..." value="" title="Search" name="s">
+                                <form class="search-form" action="/Home/List" method="get">
+                                    <input type="search" class="search-field" placeholder="Search ..." value="" title="Search" name="SearchName">
                                 </form>
                             </div>
                         </div>
@@ -232,24 +220,12 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="copyright-text">
-                            Designed by <a href="https://www.instagram.com/muratjpeg/">Murat Celik</a> <i class="fa fa-heart"></i> developed by <a href="https://www.linkedin.com/in/ekin-memi%C5%9F-4b61031a4/">Ekin Memis</a>
+                            Designed by <a href="https://www.instagram.com/muratjpeg/">Murat Celik</a> <i class="fa fa-heart"></i> developed by <a href="https://www.guvensoft.com.tr/">GüvenSoft Yazılım</a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="socials">
-                            <a href="" title="Behance">
-                                <i class="fa fa-behance"></i>
-                            </a>
-                            <a href="" title="Dribbble">
-                                <i class="fa fa-dribbble"></i>
-                            </a>
-                            <a href="" title="Facebook">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a href="" title="Google Plus">
-                                <i class="fa fa-google-plus"></i>
-                            </a>
-                            <a href="" title="Instagram">
+                            <a href="https://www.instagram.com/muratjpeg/" title="Instagram">
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
